--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
+<!-- Declares document type as HTML -->
+
 <!DOCTYPE html>
 <html lang="en-us">
 
 <head>
+        <!-- Defines character encoding for the document -->
+
     <meta charset="UTF-8" />
+        <!-- Links to an external stylesheet -->
+
     <link rel="stylesheet" href="./assets/css/style.css">
+        <!-- Sets the title of the document shown in the browser's title bar/tab -->
+
     <title>Horiseon Social Solutions Services</title>
 </head>
 
 <body>
+        <!-- Site header containing the title and navigation -->
+
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
+                        <!-- Unordered list for navigation links -->
+
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,10 +36,16 @@
             </ul>
         </div>
     </header>
+        <!-- Visual banner area, often used for eye-catching imagery or banners -->
+
     <div class="hero">
 
     </div>
+        <!-- Main content area of the website -->
+
     <main class="content">
+                <!-- SEO section with a descriptive image and content -->
+
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="image of a work space with a laptop, cup of coffee a glass full of pens and a notebook. all on a blue background with white text" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -35,6 +53,8 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
+                <!-- ORM section with a descriptive image and content -->
+
         <section id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="image of someone working on a laptop with reputation on the screen along with charts and graphs. the image ins on a blue background with white text" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -42,6 +62,8 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
+                <!-- SMM section with a descriptive image and content -->
+
         <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="an above view of a table with multible people working on their laptops with social media werds like socia and like on the table" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -50,6 +72,8 @@
             </p>
         </section>
     </main>
+        <!-- Side content that is tangentially related to the main content -->
+
     <aside class="benefits">
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -73,6 +97,8 @@
             </p>
         </aside>
     </aside>
+        <!-- Website footer, often contains copyright information or secondary navigation -->
+
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
