js back to top button

--- a/index.html
+++ b/index.html
@@ -97,8 +97,11 @@
             </p>
         </aside>
     </aside>
-        <!-- Website footer, often contains copyright information or secondary navigation -->
+    <button id="toTopBtn" title="Go to top">Top</button>
 
+
+        <!-- Website footer, often contains copyright information or secondary navigation -->
+        <script src="script.js"></script>
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
